# Doj-back/src/main/java/fun/timu/doj/controller/QuestionController.java
@@ -11,11 +11,16 @@ import fun.timu.doj.constant.UserConstant;
 import fun.timu.doj.exception.BusinessException;
 import fun.timu.doj.exception.ThrowUtils;
 import fun.timu.doj.model.dto.question.*;
+import fun.timu.doj.model.dto.questionsubmit.QuestionSubmitAddRequest;
+import fun.timu.doj.model.dto.questionsubmit.QuestionSubmitQueryRequest;
 import fun.timu.doj.model.entity.Question;
+import fun.timu.doj.model.entity.QuestionSubmit;
 import fun.timu.doj.model.entity.User;
 import fun.timu.doj.model.vo.QuestionAdminVO;
+import fun.timu.doj.model.vo.QuestionSubmitVO;
 import fun.timu.doj.model.vo.QuestionVO;
 import fun.timu.doj.service.QuestionService;
+import fun.timu.doj.service.QuestionSubmitService;
 import fun.timu.doj.service.UserService;
 import jakarta.annotation.Resource;
 import jakarta.servlet.http.HttpServletRequest;
@@ -38,6 +43,9 @@ public class QuestionController {
 
     @Resource
     private UserService userService;
+
+    @Resource
+    private QuestionSubmitService questionSubmitService;
 
     private final static Gson GSON = new Gson();
 
@@ -175,6 +183,7 @@ public class QuestionController {
         }
         return ResultUtils.success(questionService.getQuestionAdminVo(question, request));
     }
+
     /**
      * 根据 id 获取(脱敏)
      *
@@ -293,5 +302,42 @@ public class QuestionController {
         }
         boolean result = questionService.updateById(question);
         return ResultUtils.success(result);
+    }
+
+    /**
+     * 提交题目
+     *
+     * @param questionSubmitAddRequest
+     * @param request
+     * @return
+     */
+    @PostMapping("/question_submit/do")
+    public BaseResponse<Long> doQuestionSubmit(@RequestBody QuestionSubmitAddRequest questionSubmitAddRequest, HttpServletRequest request) {
+        if (questionSubmitAddRequest == null || questionSubmitAddRequest.getQuestionId() <= 0) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR);
+        }
+
+        // 登录才能提交
+        final User loginUser = userService.getLoginUser(request);
+        long questionSubmitId = questionSubmitService.doQuestionSubmit(questionSubmitAddRequest, loginUser);
+        return ResultUtils.success(questionSubmitId);
+    }
+
+    /**
+     * 分页获取题目提交列表（除了管理员外，普通用户只能看到非答案、提交代码等公开信息）
+     *
+     * @param questionSubmitQueryRequest
+     * @param request
+     * @return
+     */
+    @PostMapping("/question_submit/list/page")
+    public BaseResponse<Page<QuestionSubmitVO>> listQuestionSubmitByPage(@RequestBody QuestionSubmitQueryRequest questionSubmitQueryRequest, HttpServletRequest request) {
+        long current = questionSubmitQueryRequest.getCurrent();
+        long size = questionSubmitQueryRequest.getPageSize();
+        // 从数据库中查询原始的题目提交分页信息
+        Page<QuestionSubmit> questionSubmitPage = questionSubmitService.page(new Page<>(current, size), questionSubmitService.getQueryWrapper(questionSubmitQueryRequest));
+        final User loginUser = userService.getLoginUser(request);
+        // 返回脱敏信息
+        return ResultUtils.success(questionSubmitService.getQuestionSubmitVOPage(questionSubmitPage, loginUser));
     }
 }
